--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "haxor" # "air", "aqua", "contrast", "dark", "dirt", 
 
 # Site Settings
 locale                   : "en-US"
-title                    : "0xBenjamin"
+title                    : "rwxBeny"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Beny"
